# chess

./: .gitignore  Cargo.toml  README.md
src/: ai.rs  bench.rs  bitboard.rs  bot.rs  game.rs  gui.rs  lib.rs  state.rs
